--- a/www/test/index.html
+++ b/www/test/index.html
@@ -1,3 +1,3 @@
 <!DOCTYPE html>
 <script src="/lib/require/require.js"></script>
-<script>require(['/test/main.test.js'])</script>
+<script src="/test/main.test.js"></script>
