NodeView implementation under way

--- a/www/Backbone/test.html
+++ b/www/Backbone/test.html
@@ -368,25 +368,64 @@ tree.branch('Views', function(tree) {
     topLevel.append(new Node({headline:'asd'}))
     tree.done(0)
   })
-  tree.branch('Node', function(tree) {
-    tree(window.NodeView).type('function')
-    var n = new NodeView()
-    // tree(n.).type('object')
-    tree($(n.el).is('li')).ok()
-    tree($(n.el).find('span.handle.minus').length).is(1)
-    tree($(n.el).find('span.handle.plus').length).is(1)
-    tree($(n.el).find('span.handle.dot').length).is(1)
-    tree($(n.el).find('span.headline').length).is(1)
-    tree($(n.el).find('span.body').length).is(1)
-    tree.done(7)
+  tree.branch('Node basics', function(tree) {
+    var n = new Node()
+    tree(n.view).type('object')
+    tree(n.view instanceof Backbone.View).ok()
+    tree(n.view.model instanceof Backbone.Model).ok()
+    tree(n.view.model).is(n)
+    tree(n.view).is(n.view.model.view)
+    tree($(n.view.el).is('li')).ok()
+    tree($(n.view.el).find('span.handle.minus').length).is(1)
+    tree($(n.view.el).find('span.handle.plus').length).is(1)
+    tree($(n.view.el).find('span.handle.dot').length).is(1)
+    tree($(n.view.el).find('textarea.headline').length).is(1)
+    tree($(n.view.el).find('textarea.body').length).is(1)
+    tree.done(11)
+  })
+  tree.branch('Node changes from model to view', function(tree) {
+    tree(NodeView.prototype.changeViewHead).type('function')
+    tree(NodeView.prototype.changeViewBody).type('function')
+    var n = new Node({
+      headline:'fopo',
+      body:'bar'
+    })
+    var head = $(n.view.el).find('.headline')
+    var body = $(n.view.el).find('.body')
+    tree(head.text()).is('fopo')
+    tree(body.text()).is('bar')
+    n.set({headline:'asd'})
+    tree(head.text()).is('asd')
+    tree(body.text()).is('bar')
+    n.set({body:'str8625'})
+    tree(head.text()).is('asd')
+    tree(body.text()).is('str8625')
+    tree.done(8)
+  })
+  tree.branch('Node changes from view to model', function(tree) {
+    tree(NodeView.prototype.changeModelHead).type('function')
+    tree(NodeView.prototype.changeModelBody).type('function')
+    var n = new Node({
+      headline:'str6981',
+      body:'str8476'
+    })
+    var head = $(n.view.el).find('.headline')
+    var body = $(n.view.el).find('.body')
+    // TODO not just change event
+    head.text('str1331').change()
+    tree(n.get('headline')).is('str1331')
+    tree(n.get('body')).is('str8476')
+    body.text('str8699').change()
+    tree(n.get('headline')).is('str1331')
+    tree(n.get('body')).is('str8699')
+    tree.done(6)
   })
   tree.branch('//ChildrenView', function(tree) {
     tree(window.ChildrenView).type('function')
     var chv = new ChildrenView()
     tree($(chv.el).is('ul')).ok()
     var n = new NodeView()
-    chv.
-    // tree($(chv.el).find('ul').length).is(1)
+    // tree($(chv.el).find('ul').length).isnt(1)
     tree.done(2)
   })
   tree.done(0)
