Got rid of this-binding problem.

--- a/www/Backbone/index.html
+++ b/www/Backbone/index.html
@@ -14,4 +14,7 @@ $('body').append(interface.el)
 $(interface.el).append(topLevel.view.el)
 topLevel.append(n)
 focus.at(n)
+var f = focus.goUp
+// window.addEventListener('click', focus.goUp, false)
+// f.apply({a:1})
 </script>
