--- a/www/Backbone/index.html
+++ b/www/Backbone/index.html
@@ -5,13 +5,26 @@
 <script type="text/javascript" src="underscore.js"></script>
 <script type="text/javascript" src="backbone.js"></script>
 <script type="text/javascript" src="main4.js"></script>
+<style type="text/css">
+.focused.ours {
+  background:#888;
+}
+.focused.theirs {
+  background:#DDD;
+}
+.body {
+  display: none;
+}
+</style>
 <script type="text/javascript">
 var interface = new Interface
 var topLevel = new Children
 var n = new Node
+var n2 = new Node
 // var f = new Focus
 $('body').append(interface.el)
 $(interface.el).append(topLevel.view.el)
+topLevel.append(n2)
 topLevel.append(n)
 focus.at(n)
 var f = focus.goUp
