Some refactoring due to Backbone changes.

--- a/www/Backbone/test.html
+++ b/www/Backbone/test.html
@@ -2,7 +2,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <script type="text/javascript" src="jquery.js"></script>
 <script type="text/javascript" src="shortcut.js"></script>
-<script type="text/javascript" src="underscore.js"></script>
+<script type="text/javascript" src="underscore-min.js"></script>
 <script type="text/javascript" src="backbone.js"></script>
 <script type="text/javascript" src="tree.js"></script>
 <script type="text/javascript" src="main4.js"></script>
