On the way to support socket.io

--- a/www/Backbone/index.html
+++ b/www/Backbone/index.html
@@ -1,8 +1,9 @@
 <body></body>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <script type="text/javascript" src="jquery.js"></script>
+<script type="text/javascript" src="/socket.io/socket.io.js"></script>
 <script type="text/javascript" src="shortcut.js"></script>
-<script type="text/javascript" src="underscore.js"></script>
+<script type="text/javascript" src="underscore-min.js"></script>
 <script type="text/javascript" src="backbone.js"></script>
 <script type="text/javascript" src="main4.js"></script>
 <style type="text/css">
