--- a/www/Backbone/index.html
+++ b/www/Backbone/index.html
@@ -1,3 +1,4 @@
+<title>Tali WIP</title>
 <body></body>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <script type="text/javascript" src="jquery.js"></script>
@@ -6,19 +7,36 @@
 <script type="text/javascript" src="underscore-min.js"></script>
 <script type="text/javascript" src="backbone.js"></script>
 <script type="text/javascript" src="main4.js"></script>
-<style type="text/css">
-.focused.ours > .headline {
-  background:#888;
-}
-.focused.theirs > .headline {
-  background:#DDD;
-}
-.body {
-  display: none;
-}
-</style>
+<link rel="stylesheet" type="text/css" href="normalize.css">
+<link rel="stylesheet" type="text/css" href="style.css">
 <script type="text/javascript">
 var interface = new Interface
 $('body').append(interface.el)
 $(interface.el).append(topLevel.view.el)
 </script>
+<!-- <div class="tali-top">
+    <div id="notifications"></div>
+    <ul>
+        <li class="focused ours">
+            <span class="handle plus">+</span>
+            <span class="handle minus">-</span>
+            <span class="handle dot">&nbsp;</span>
+            <textarea class="headline">1st</textarea>
+            <span class="focusedBy"></span>
+        </li>
+        <li class="focused theirs">
+            <span class="handle plus">+</span>
+            <span class="handle minus">-</span>
+            <span class="handle dot">&nbsp;</span>
+            <textarea class="headline">1st</textarea>
+            <span class="focusedBy">JanCe</span>
+        </li>
+        <li class="focused theirs ours">
+            <span class="handle plus">+</span>
+            <span class="handle minus">-</span>
+            <span class="handle dot">&nbsp;</span>
+            <textarea class="headline">1st</textarea>
+            <span class="focusedBy"></span>
+        </li>
+    </ul>
+</div> -->
