Single-payer mode works.
Tests recieved love, now work again.
Interface utalizes factory pattern to get socket.io
Children.add() is handled by the view correctly.

--- a/www/Backbone/index.html
+++ b/www/Backbone/index.html
@@ -10,7 +10,7 @@
 <link rel="stylesheet" type="text/css" href="normalize.css">
 <link rel="stylesheet" type="text/css" href="style.css">
 <script type="text/javascript">
-var interface = new Interface
+var interface = new Interface(io)
 $('body').append(interface.el)
 $(interface.el).append(topLevel.view.el)
 </script>
